endpoints: retrieve notifications
