# routes/routers.go
@@ -57,4 +57,5 @@ func SetupRoutes(app *fiber.App) {
 	profilesRouter.Get("/friends/requests", midw.AuthMiddleware, RetrieveFriendRequests)
 	profilesRouter.Post("/friends/requests", midw.AuthMiddleware, SendOrDeleteFriendRequest)
 	profilesRouter.Put("/friends/requests", midw.AuthMiddleware, AcceptOrRejectFriendRequest)
+	profilesRouter.Get("/notifications", midw.AuthMiddleware, RetrieveUserNotifications)
 }
